# acpixm

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  TICKETS.md  TODO.md  cli.py  install.sh  main.py  pyproject.toml
.github/workflows/: ci.yml
diagrams/: TODO.md  class_diagram.puml  sequence_diagram.puml
docs/: asl_grammar.ebnf  asl_grammar_uefi.ebnf
examples/: LoadStore.yml  OpRegionCritical.yml  OpRegionSuspicious.yml  StoreCode.yml
examples/snippets/: rootkit1.asl  rootkit2.asl
src/: ASL.md  acpi_analyzer.py  acpi_tables_disassembler.py  acpi_tables_dumper.py  acpi_tables_extractor.py  acpi_toolchain.py  config.py  main.py
src/acpi_astmatcher/: astmatcher.py
src/acpi_matcher/: astgrep_matcher.py  json_handler.py  logic_engine.py  matcher_pipeline.py  return_evaluator.py  rule_processor.py  token_resolver.py  yaml_processor.py
src/acpi_matcher/formatters/: console.py  formatter.py  jsonfmt.py  registry.py
src/acpi_matcher/logic_engine/: logic_engine.py  logic_ops.py
src/acpi_parser/: asl_parser.py  ast_builder.py  errors.py  grammar.ebnf
src/acpi_provider/: acpi_provider.py
src/acpi_toolchain/: toolchain.py
src/acpixm/: __init__.py  acpi_analyzer.py  cli.py
src/acpixm/acpi_matcher/: __init__.py  json_handler.py  matcher.py  return_evaluator.py  token_resolver.py  yaml_processor.py
src/acpixm/acpi_matcher/formatters/: console.py  formatter.py  jsonfmt.py  registry.py
src/acpixm/acpi_matcher/logic_engine/: logic_engine.py  logic_ops.py
src/acpixm/data_provider/: commands.py  pipeline.py
src/acpixm/data_provider/stages/: astgrep_scan.py  disassemble_tables.py  dump_acpi.py  extract_tables.py  iomem_kernel.py
src/data_provider/: acpi_provider.py  pipeline.py  system_provider.py
src/data_provider/stages/: astgrep_scan.py  disassemble_tables.py  dump_acpi.py  extract_tables.py  iomem_kernel.py
src/ui/: pretty_summary.py
src/utils/: json_transform.py  logic_engine.py  yaml_processor.py  yamlhelper.py
test_files/: basic.dsl  test.dsl
tests/: conftest.py
tests/fixtures/: OpRegionLowMem.yml  clean.dsl  low_mmio.asl  rootkit1.asl  systemdata.json
tests/integration/: test_golden.py  test_matcher.py
tests/unit/: test_json_handler.py  test_logic_engine.py  test_logic_ops.py  test_return_evaluator.py  test_smoke.py
tree-sitter-asl/: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  example-file  go.mod  grammar.js  grammar.js.bkp  grammar.no-space.js  package.json  pyproject.toml  setup.py  sgconfig.yml  tree-sitter.json
tree-sitter-asl/bindings/c/: tree-sitter-asl.pc.in
tree-sitter-asl/bindings/go/: binding.go  binding_test.go
tree-sitter-asl/bindings/node/: binding.cc  index.js
tree-sitter-asl/bindings/python/tests/: test_binding.py
tree-sitter-asl/bindings/python/tree_sitter_asl/: __init__.py  binding.c
tree-sitter-asl/bindings/rust/: build.rs  lib.rs
tree-sitter-asl/bindings/swift/TreeSitterAsl/: asl.h
tree-sitter-asl/bindings/swift/TreeSitterAslTests/: TreeSitterAslTests.swift
tree-sitter-asl/rules/: LoadStore.yml  OpRegionCritical.yml  OpRegionSuspicious.yml  rule.yml  test_rule.yml
tree-sitter-asl/snippets/: example-file.dsl  example-file.dsl.bkp  full_example2.dsl  rootkit1.asl  rootkit2.asl  rootkit3.asl  test_example.dsl
tree-sitter-asl/src/: grammar.json  node-types.json  parser.c
tree-sitter-asl/test/corpus/: basics.txt  definition_block.txt  field.txt  name.txt
