[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acpixm"
version = "0.1.0"
description = "ACPI Rootkit Detection Tool - A comprehensive tool for collecting and analyzing ACPI tables to detect potential security indicators."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Hardware",
]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/manugcr/acpixm"
Repository = "https://github.com/manugcr/acpixm"
Issues = "https://github.com/manugcr/acpixm/issues"

[project.scripts]
acpixm = "acpixm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/acpixm"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88