[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acpixm"
version = "0.1.0"
authors = [{name = "Manuel Gil Cernich", email = "mgilcernich@gmail.com"}]
description = "ACPI Rootkit Detection Tool - Detects potential security indicators in ACPI tables"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "ast-grep-cli>=0.38",
    "simpleeval>=0.9",
]

[project.urls]
Repository = "https://github.com/manugcr/acpixm"

[project.scripts]
acpixm = "acpixm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/acpixm"]
artifacts = ["src/acpixm/**/*.so"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.4", "mypy>=1.0", "types-PyYAML>=6.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "--tb=short"

[tool.mypy]
strict = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = "simpleeval"
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]